refactored the file templets, removed the bugg that you get sometimes a include and a includes directory. Also added a feature which puts a std::cout stream to your main function wich has a random generated joke

--- a/templets/Makefiles/makefileCppTemp.txt
+++ b/templets/Makefiles/makefileCppTemp.txt
@@ -6,7 +6,7 @@ HEADER	=	hppFiles...
 OBJ_DIR	=	./obj/
 OBJ		=	$(addprefix $(OBJ_DIR),$(SRC:.cpp=.o))
 CC		=	c++
-CFLAGS	=	-Wall -Wextra -Werror -std=c++98 -g
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98 -g -MMD
 
 # Execution
 all: $(NAME)
